--- a/public/assets/admin/css/style.css
+++ b/public/assets/admin/css/style.css
@@ -4800,7 +4800,7 @@ aside .navbar-nav > .nav-item.mt-0 {
 }
 
 .auth-wrapper-right .btn--primary {
-  background: #01684b;
+  background: #082047;
   font-weight: 500;
 }
 
