--- a/public/assets/admin/css/style.css
+++ b/public/assets/admin/css/style.css
@@ -131,7 +131,7 @@ aside .navbar-vertical-aside-has-menu.active > .nav-link {
   right: 15px !important;
   top: 15px !important;
 }
-
+/* sadasd */
 :root {
   --primary-clr: #02316a;
   --primary-clr-2: #044faa;
