--- a/public/assets/admin/css/style.scss
+++ b/public/assets/admin/css/style.scss
@@ -118,7 +118,7 @@ aside .navbar-vertical-aside-has-menu.active > .nav-link {
     right: 15px !important;
     top: 15px !important;
 }
-
+// asdfasd
 :root {
     --primary-clr: #02316a;
     --primary-clr-2: #044faa;
