--- a/public/assets/admin/css/style.scss
+++ b/public/assets/admin/css/style.scss
@@ -69,7 +69,7 @@ aside .navbar-vertical-aside-has-menu.active > .nav-link {
 }
 
 .navbar-vertical-content {
-    background: #005555;
+    background: var(--base-clr);
 }
 
 .swal2-popup .swal2-styled.swal2-cancel {
