--- a/public/assets/admin/css/style.css
+++ b/public/assets/admin/css/style.css
@@ -1873,7 +1873,7 @@ body {
 }
 
 .toggle-switch-input:checked + .toggle-switch-label {
-  background-color: #009faa;
+  background-color: var(--primary-clr-2);
 }
 
 .product-list-page {
